<resources>
    <string name="app_name">Gun Paradise</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_battlefield">MainScreen</string>
    <string name="buy_units">Buy Units</string>
    <string name="upgrade_units">Upgrade</string>
    <string name="dummy_content">Map here</string>
    <string name="start_game">Start game</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

        <string name="title_activity_combat">combat</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="enemies_units_and_all_that_stuff_goes_here">Enemies, Units and all that stuff goes here</string>
    <string name="taps">Taps:</string>
    <string name="tapsCount">0</string>
</resources>
