<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:paddingBottom="@dimen/activity_vertical_margin"

    android:paddingLeft="@dimen/activity_horizontal_margin"

    android:paddingRight="@dimen/activity_horizontal_margin"

    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".MainActivity">


        <Button
            android:id="@+id/startButton"
            android:text="@string/start_game"
            android:layout_width="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_height="0dp"
            app:layout_heightPercent="50%"/>
        <Button
            android:id="@+id/action_settings"
            android:text="@string/settings"
            android:layout_width="fill_parent"
            android:layout_below="@id/startButton"
            android:layout_height="0dp"
            app:layout_heightPercent="25%"/>


        <Button
            android:id="@+id/about"
            android:text="@string/about"
            android:layout_width="fill_parent"
            android:layout_below="@+id/action_settings"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_height="0dp"
            app:layout_heightPercent="25%"/>
</android.support.percent.PercentRelativeLayout>